# fast-sr-unet-mod

./: .gitignore  README.md  data_loader.py  models.py  pyproject.toml  pytorch_unet.py  train.py  utils.py
configs/: train_afdsrunet.yaml  train_srunet.yaml
scripts/: evaluate_model.py  main.py  render.py  train.py  upscale_img.py
src/: attend.py  data_loader.py  freq_unet.py  models.py  pytorch_unet.py  style_srunet.py  utils.py
