[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "srunet"
authors = [{ name = "Marco Di Rienzo" }]
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "lightning",
    "lpips"
]

[project.optional-dependencies]
render = ["opencv-python", "av"]

[tool.setuptools.packages.find]
where = ["src"]
